examples/SmallPython/files/bad/b5.py
def foo():
    def bar():
    a
    b
